# monitoragent

./: Cargo.toml  README.md  agent.bat  debug_log.txt  settings.txt
src/: amunix.rs  amwin.rs
